--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://your-netlify-site-name.netlify.app/"
+baseURL = "https://pilomyblog.netlify.app/"
 languageCode = 'en-us'
 title = "Pilo"
 theme = "PaperMod"
