--- a/hugo.toml
+++ b/hugo.toml
@@ -1,12 +1,10 @@
 baseURL = "https://pilomyblog.netlify.app/"
-languageCode = 'en-us'
+languageCode = "en-us"
 title = "Pilo"
 theme = "PaperMod"
 
-# Optional PaperMod parameters
 [params]
   author = "Mark Ople"
-  # ShowReadingTime = true
   ShowDate = true
   mainSections = ["posts"]
 
